# LeagueJax

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.en.md  README.ja.md  README.md  README.zh-CN.md  biome.json  cliff.toml  index.html  mini.html  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: cloudflare-pages.yml  pages.yml  release.yml
docs/plans/: 2026-03-07-architecture-design.md  2026-03-07-scaffold-implementation.md
docs/superpowers/specs/: 2026-03-12-client-status-tooltip-design.md
resources/: league-servers.json
scripts/: bump-version.ts  dry-run-release-notes.ts  generate-updater-manifest.ts  prepare-site-deploy.ts
site/: index.html  main.js  styles.css
src/: App.tsx  MiniApp.tsx  index.css  main.tsx  mini-main.tsx  routeTree.gen.ts  tailwind.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/bindings/: cherry.ts  lcu.ts  lcu_events.ts  maps.ts  matches.ts  ongoing_game.ts  queues.ts  rank.ts  settings.ts  sgp.ts  summoner.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  jax.rs  lib.rs  main.rs  network_config.rs  state.rs
src-tauri/src/commands/: auto_accept.rs  claim_tool.rs  history.rs  lcu.rs  map.rs  mini_window.rs  mod.rs  ongoing_game.rs  platform.rs  quit.rs  replay.rs  settings.rs  shards.rs  updater.rs
src-tauri/src/concepts/: cherry.rs  maps.rs  match_summaries_raw.rs  matches.rs  mod.rs  ongoing_game.rs  queues.rs  rank.rs  settings.rs  shards.rs  summoner.rs
src-tauri/src/jax/: mod.rs  shard.rs
src-tauri/src/shards/: auto_accept.rs  auto_gameflow.rs  auto_reply.rs  auto_select.rs  cdragon_static_data.rs  file_logger.rs  keyboard.rs  league_bridge.rs  log.rs  mini_window.rs  mod.rs  network.rs  ongoing_game.rs  persistence_sled.rs  saved_player.rs  settings.rs  settings_bridge.rs  static_cache.rs  statistics.rs  tauri_host.rs  tray.rs  updater.rs  window_effect.rs
src-tauri/src/shards/auto_accept/: manager.rs  mod.rs  types.rs
src-tauri/src/shards/cdragon/: mod.rs
src-tauri/src/shards/claim_tool/: manager.rs  mod.rs  types.rs
src-tauri/src/shards/ongoing_game/: behaviors.rs  context.rs  driver.rs  manager.rs  mod.rs  runtime.rs  state.rs  tree.rs  types.rs
src-tauri/src/shards/ongoing_game/events/: champ_select_session.rs  gameflow_phase.rs  gameflow_session.rs  mod.rs
src-tauri/src/shards/replay/: mod.rs  parser.rs  types.rs
src-tauri/src/shards/settings/: mod.rs  types.rs
src-tauri/src/shards/sgp/: api.rs  config.rs  http_client.rs  manager.rs  matches.rs  mod.rs  session.rs
src-tauri/src/storage/: db.rs  mod.rs  store.rs
src-tauri/src/utils/: cmd.rs  http_json.rs  http_log.rs  league_cmd_arg.rs  mod.rs  webview.rs
src/bindings/: cherry.ts  claim_tool.ts  lane.ts  lcu.ts  lcu_chat.ts  lcu_events.ts  maps.ts  matches.ts  ongoing_game.ts  queues.ts  rank.ts  replay.ts  settings.ts  sgp.ts  shards.ts  summoner.ts  tauri_host.ts  updater.ts
src/components/: AppToaster.css.ts  AppToaster.tsx  AppTooltip.css.ts  AppTooltip.tsx  BrandGradientText.css.ts  BrandGradientText.tsx  ClientStatus.css.ts  ClientStatus.tsx  CopyButton.css.ts  CopyButton.tsx  DebugCommandPanel.css.ts  DebugCommandPanel.tsx  IconActionButton.css.ts  IconTitleSubtitleState.css.ts  IconTitleSubtitleState.tsx  JaxLogo.tsx  LanguageToggle.css.ts  LanguageToggle.tsx  LazyImage.css.ts  LazyImage.tsx  LcuImage.tsx  ProfileIcon.tsx  RefreshButton.css.ts  RefreshButton.tsx  ScoreboardIcon.tsx  SummonerID.tsx  TabBar.css.ts  TabBar.tsx  ThemeToggle.css.ts  ThemeToggle.tsx  TitleBar.css.ts  TitleBar.tsx  ToolbarActionButton.css.ts  WindowControlButton.css.ts  WindowControlIcons.tsx  WipPlaceholder.css.ts  WipPlaceholder.tsx  toastStore.ts
src/components/DataTable/: DataTable.css.ts  DataTable.tsx  index.ts
src/components/champion-avatar/: ChampionAvatar.css.ts  ChampionAvatar.tsx
src/components/league-position/: LeaguePositionIcon.css.ts  LeaguePositionIcon.tsx
src/components/mini-rank-display/: MiniRankDisplay.css.ts  MiniRankDisplay.tsx  index.ts
src/components/scroll-area/: ScrollArea.css.ts  ScrollArea.tsx  index.ts
src/components/settings-ui/: SettingsActionButton.css.ts  SettingsActionButton.tsx  SettingsColorPicker.css.ts  SettingsColorPicker.tsx  SettingsControl.css.ts  SettingsControl.ts  SettingsFieldRow.css.ts  SettingsFieldRow.tsx  SettingsHint.css.ts  SettingsHint.tsx  SettingsInput.css.ts  SettingsInput.tsx  SettingsSectionCard.css.ts  SettingsSectionCard.tsx  SettingsSelect.css.ts  SettingsSelect.tsx  SettingsSwitch.css.ts  SettingsSwitch.tsx  SettingsToggle.tsx  SettingsValueText.css.ts  SettingsValueText.tsx  index.ts
src/core/shard/: web-shard.ts
src/features/: backend-shard-ids.ts  main-registry.ts  mini-registry.ts  registry-entry.test.ts  registry-entry.ts  registry.ts  shard-ids.ts
src/features/auto-gameflow/: manifest.ts
src/hooks/: to-ddragon-version.ts  use-cdragon-champion-summary.ts  use-cdragon-static-data.ts  use-champion-icon.ts  use-dragon-static-data.ts  use-game-version.ts  use-lcu-events.ts  use-lcu-maps.ts  use-lcu-queues.ts  use-profile-icon.ts  use-rank-icon.ts  use-theme.ts  use-window-effect.ts
src/i18n/: index.ts
src/infra/: errors.ts  logger.ts
src/jax/: index.ts
src/layout/: __mini-shell.tsx  __mini.css.ts  __mini.tsx  __root.css.ts  __root.tsx  mini-window.css.ts
src/routes/: __root.css.ts  __root.tsx  auto-gameflow.tsx  auto-reply.tsx  auto-select.tsx  automation.tsx  game.tsx  history.css.ts  history.tsx  index.tsx  ongoing-game.tsx  saved-players.tsx  settings.tsx  statistics.tsx  tools.tsx
src/runtime/: backend-shards.ts  web-contract.ts
src/stores/: app.ts  lcu.ts  tabs.ts  theme.ts
src/styles/: game-colors.css.ts  global.css.ts  layers.css.ts  shared.css.ts  theme.css.ts
src/types/: shard-id.ts  web-shard.ts
src/utils/: cdragon-locale.ts  cdragon.ts  lcu-map-assets.ts  profile-icon-assets.test.ts  profile-icon-assets.ts  rank-display.ts
(+271 files in other folders)
