[workspace]
members = ["src-tauri"]
resolver = "3"

#[patch."https://github.com/tarnishablec/maokai"]
#maokai-runner = { path = "../../Rust/maokai/maokai-runner" }
#maokai-tree = { path = "../../Rust/maokai/maokai-tree" }


[profile.dev]
opt-level = 0          # 彻底关闭优化
debug = true           # 确保生成完整的调试信息
debug-assertions = true # 启用运行时断言
overflow-checks = true  # 启用整数溢出检查
lto = false            # 关闭链接时优化
incremental = true     # 保持增量编译以加快速度

[profile.dev.package."*"]
opt-level = 2

[profile.release]
codegen-units = 1
lto = "thin"
strip = true

[workspace.lints.clippy]
unwrap_used = "deny"

[workspace.dependencies]
async-trait = "0.1"
base64 = "0.22"
futures-util = "0.3"
jax = { git = "https://github.com/tarnishablec/jax.git", branch = "v0.3" }
jax-probes = { git = "https://github.com/tarnishablec/jax.git", branch = "v0.3" }
maokai-gears = { git = "https://github.com/tarnishablec/maokai", branch = "main" }
maokai-machine = { git = "https://github.com/tarnishablec/maokai", branch = "main" }
maokai-runner = { git = "https://github.com/tarnishablec/maokai", branch = "main" }
maokai-tree = { git = "https://github.com/tarnishablec/maokai", branch = "main" }
ntapi = "0.4.3"
reqwest = { version = "0.13.2", default-features = false }
rustls = { version = "0.23", default-features = false }
serde = "1"
serde_json = "1"
serde_path_to_error = "0.1"
sled = "0.34.7"
snafu = "0.9.0"
strum = "0.28.0"
sysinfo = "0.38.4"
tauri = "2"
tauri-build = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
time = "0.3"
tokio = "1"
tokio-tungstenite = "0.29.0"
tokio-util = "0.7"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
ts-rs = "12.0.1"
urlencoding = "2"
uuid = "1"
window-vibrancy = "0.7.1"
windows = "0.62.2"
windows-sys = "0.61.2"
tauri-plugin-process = "2"
euclid = "0.22.14"
