[package]
name = "league-jax"
version = "0.1.49"
description = "A League of Legends toolkit built with Tauri"
authors = ["tarnishablec@outlook.com"]
edition = "2021"

[lib]
name = "league_jax_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
jax = { workspace = true }
jax-probes = { workspace = true }

tauri = { workspace = true, features = ["tray-icon", "image-ico"] }
uuid = { workspace = true, features = ["serde", "v7"] }
tauri-plugin-store = { workspace = true }
tauri-plugin-updater = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-os = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-single-instance = { workspace = true }

reqwest = { workspace = true, features = ["json", "gzip", "rustls-no-provider"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
rustls = { workspace = true, features = ["ring"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time", "net", "signal"] }
tokio-util = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_norway = { workspace = true }
serde_path_to_error = { workspace = true }
async-trait = { workspace = true }
sysinfo = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "local-time"] }
time = { workspace = true, features = ["formatting"] }
maokai-runner = { workspace = true }
maokai-tree = { workspace = true }
maokai-machine = { workspace = true, features = ["tokio-mt-task"] }
maokai-gears = { workspace = true }
windows-sys = { workspace = true, features = ["Win32_Graphics_Gdi", "Win32_Graphics", "Win32_System_Threading", "Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_WindowsProgramming", "Win32_System_LibraryLoader", "Win32_Storage_FileSystem", "Wdk_System_Threading", "Win32_System_Memory", "Win32_Graphics_Dwm", "Win32_UI_Accessibility", "Win32_UI_WindowsAndMessaging"] }
ntapi = { workspace = true }
ts-rs = { workspace = true, features = ["no-serde-warnings"] }
sled = { workspace = true }
snafu = { workspace = true, features = ["backtrace"] }
strum = { workspace = true, features = ["derive"] }
tauri-plugin-process = { workspace = true }
euclid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time", "net", "signal", "test-util"] }

[lints]
workspace = true





































